# mwutil

./: README.md  SECURITY.md  lint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint.yml
mwutil/: __main__.py  cli.py  constants.py  module.py  utils.py
mwutil/modules/: add-gerrit-ssh-key.py  bash.py  clone.py  composer.py  db.py  down.py  dump.py  elasticsearch.py  install.py  lint.py  list-repo-remotes.py  phan.py  phpunit.py  pull.py  recreate.py  reset.py  run.py  security.py  setup-gerrit.py  setup-github.py  shell.py  sql.py  up.py  update-symlinks.py  update.py
